--- a/AbyssalCreatures/build.gradle
+++ b/AbyssalCreatures/build.gradle
@@ -1,16 +1,27 @@
-dependencies {
-    compileOnly project(':Mobzy-API')
+plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
 }
 
-jar {
+dependencies {
+    compileOnly project(':Mobzy-API')
+
+    if (useLocalIdofront.toBoolean()) implementation project(':idofront')
+    else implementation 'com.github.mineinabyss:idofront:master-SNAPSHOT'
+}
+
+shadowJar {
     getArchiveBaseName().set("AbyssalCreatures")
     getArchiveClassifier().set(null)
+
+    relocate 'com.mineinabyss.idofront', "com.mineinabyss.idofront.${project.group}.${project.name}"
+
+    minimize ()
 }
 
 //Move into plugins folder
 if (plugin_path != '') {
     task copyJar(type: Copy) {
-        from jar // here it automatically reads jar file produced from jar task
+        from shadowJar // here it automatically reads jar file produced from jar task
         into plugin_path
     }
     build.dependsOn copyJar
