--- a/Mobzy-API/build.gradle
+++ b/Mobzy-API/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.0.0'
-//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
+//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
 }
 repositories {
     maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
@@ -11,6 +11,7 @@ dependencies {
     compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.5.0"
     implementation 'com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721'
     implementation 'org.nield:kotlin-statistics:1.2.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 //        implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0" // JVM dependency
 
     if (useLocalGuiy.toBoolean()) implementation project(':guiy')
