--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
 }
+
+ext.kotlin_version = '1.3.70'
 
 repositories {
     mavenCentral()
@@ -17,7 +19,6 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    ext.kotlin_version = '1.3.61'
     //Put your plugins folder directory here! If it is left as '', jars won't be copied
     ext.plugin_path = ''
 
@@ -44,7 +45,7 @@ subprojects {
         compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT' //Spigot
         compileOnly 'org.spigotmc:spigot:1.15-R0.1-SNAPSHOT' // NMS
         compileOnly 'de.erethon:headlib:3.0.2'
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     }
 
     compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
