--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ plugin_version=2.3
 #this should always be set to false in "production", enabling it is used to make any local additions to
 #guiy before they are pushed to guiy's main repo.
 useLocalGuiy=false
-useLocalIdofront=false
+useLocalIdofront=true
