--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'maven-publish'
-//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -94,13 +94,15 @@ dependencies {
     implementation 'com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721'
     implementation 'org.nield:kotlin-statistics:1.2.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-//        implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0" // JVM dependency
+    implementation "com.charleskorn.kaml:kaml:0.16.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0" // JVM dependency
 
     if (useLocalGuiy.toBoolean()) implementation project(':guiy')
     else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
 
     if (useLocalIdofront.toBoolean()) implementation project(':idofront')
     else implementation 'com.mineinabyss:idofront:0.1.+'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.70"
 }
 
 shadowJar {
